fix: update auth dependencies to support JWKS and fix redirect URL

--- a/phase-2/backend/requirements.txt
+++ b/phase-2/backend/requirements.txt
@@ -7,6 +7,7 @@ python-dateutil==2.9.0
 pydantic-settings==2.6.0
 alembic==1.14.0
 psycopg2-binary==2.9.10
+cryptography>=41.0.0
 
 # Development dependencies
 pytest==8.3.3
