--- a/phase-3/frontend/package.json
+++ b/phase-3/frontend/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@openai/chatkit": "^1.3.0",
+    "@openai/chatkit-react": "^1.4.1",
     "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -22,6 +24,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@tanstack/react-query": "^5.90.16",
     "@types/pg": "^8.16.0",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
@@ -34,6 +37,7 @@
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.9"
