--- a/phase-3/backend/requirements.txt
+++ b/phase-3/backend/requirements.txt
@@ -9,6 +9,7 @@ alembic==1.14.0
 psycopg2-binary==2.9.10
 cryptography>=41.0.0
 openai-agents==0.2.9
+openai-chatkit
 
 # Development dependencies
 pytest==8.3.3
